# obex-data-server

./: Makefile  README.md  obex-data-server.spec
src/: ChangeLog  Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h.in  configure  configure.in
src/data/: Makefile.am  Makefile.in  obex-data-server.1
src/src/: Makefile.am  Makefile.in  ods-bluez.c  ods-capabilities.c  ods-common.c  ods-common.h  ods-error.c  ods-error.h  ods-folder-listing.c  ods-folder-listing.h  ods-imaging-helpers.c  ods-main.c  ods-manager.c  ods-manager.h  ods-manager.xml  ods-marshal.c  ods-marshal.h  ods-obex.c  ods-obex.h  ods-server-session.c  ods-server-session.h  ods-server.c  ods-server.h  ods-session.c  ods-session.h  ods-usb.c  ods-usb.h
src/test/: Makefile.am  Makefile.in
