SUBDIRS =						\
	data						\
	src							\
	test

EXTRA_DIST =					\
	dbus-api.txt

MAINTAINERCLEANFILES =			\
	*~			      			\
	Makefile.in					\
	aclocal.m4					\
	config.h.in					\
	config.log					\
	config.status				\
	configure					\
	depcomp						\
	install-sh					\
	missing						\
	stamp-h1

